fix credits occlude and z-index

--- a/app/components/control-bar/audio-player/styles.module.css
+++ b/app/components/control-bar/audio-player/styles.module.css
@@ -8,6 +8,7 @@
 	bottom: 25px;
 	transition: opacity 1s ease 0s; 
 	opacity: 0;
+	z-index: 1000;
 }
 
 @media only screen and (max-width: 1000px) {
